@@ -18,25 +18,25 @@
  ****************************************************************/
 package org.apache.cayenne.query;
 
-import org.apache.cayenne.DataRow;
-import org.apache.cayenne.ObjectContext;
-import org.apache.cayenne.exp.property.BaseProperty;
-import org.apache.cayenne.exp.Expression;
-import org.apache.cayenne.exp.ExpressionFactory;
-import org.apache.cayenne.exp.property.ComparableProperty;
-import org.apache.cayenne.exp.property.NumericProperty;
-import org.apache.cayenne.exp.Property;
-import org.apache.cayenne.exp.property.PropertyFactory;
-import org.apache.cayenne.map.DbEntity;
-import org.apache.cayenne.map.EntityResolver;
-import org.apache.cayenne.map.ObjEntity;
-
 import java.sql.Statement;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+
+import org.apache.cayenne.DataRow;
+import org.apache.cayenne.ObjectContext;
+import org.apache.cayenne.exp.Expression;
+import org.apache.cayenne.exp.ExpressionFactory;
+import org.apache.cayenne.exp.Property;
+import org.apache.cayenne.exp.property.BaseProperty;
+import org.apache.cayenne.exp.property.ComparableProperty;
+import org.apache.cayenne.exp.property.NumericProperty;
+import org.apache.cayenne.exp.property.PropertyFactory;
+import org.apache.cayenne.map.DbEntity;
+import org.apache.cayenne.map.EntityResolver;
+import org.apache.cayenne.map.ObjEntity;
 
 /**
  * A selecting query providing chainable API. This is an alternative to
@@ -225,6 +225,31 @@ public class ObjectSelect<T> extends FluentSelect<T> {
     }
 
     /**
+     * Appends a having qualifier expression of this query. An equivalent to
+     * {@link #and(Expression...)} that can be used a syntactic sugar.
+     *
+     * @return this object
+     * @since 4.2
+     */
+    public ObjectSelect<T> having(Expression expression) {
+        havingExpressionIsActive = true;
+        return and(expression);
+    }
+
+    /**
+     * Appends a having qualifier expression of this query, using provided expression
+     * String and an array of position parameters. This is an equivalent to
+     * calling "and".
+     *
+     * @return this object
+     * @since 4.2
+     */
+    public ObjectSelect<T> having(String expressionString, Object... parameters) {
+        havingExpressionIsActive = true;
+        return and(ExpressionFactory.exp(expressionString, parameters));
+    }
+
+    /**
      * AND's provided expressions to the existing WHERE clause expression.
      *
      * @return this object
@@ -249,17 +274,17 @@ public class ObjectSelect<T> extends FluentSelect<T> {
         }
 
         Collection<Expression> all;
+        Expression activeExpression = getActiveExpression();
 
-        if (where != null) {
+        if(activeExpression != null) {
             all = new ArrayList<>(expressions.size() + 1);
-            all.add(where);
+            all.add(activeExpression);
             all.addAll(expressions);
         } else {
             all = expressions;
         }
 
-        where = ExpressionFactory.and(all);
-        replacementQuery = null;
+        setActiveExpression(ExpressionFactory.and(all));
         return this;
     }
 
@@ -287,17 +312,17 @@ public class ObjectSelect<T> extends FluentSelect<T> {
         }
 
         Collection<Expression> all;
+        Expression activeExpression = getActiveExpression();
 
-        if (where != null) {
+        if(activeExpression != null) {
             all = new ArrayList<>(expressions.size() + 1);
-            all.add(where);
+            all.add(activeExpression);
             all.addAll(expressions);
         } else {
             all = expressions;
         }
 
-        where = ExpressionFactory.or(all);
-        replacementQuery = null;
+        setActiveExpression(ExpressionFactory.or(all));
         return this;
     }
 
